--- a/src/style.css
+++ b/src/style.css
@@ -44,7 +44,7 @@
         }
 		
 		/* Debug column styling */
-td:nth-child(9) {
+td:nth-child(6) {
     max-width: 200px;
     font-size: 11px;
     color: #666;
@@ -52,7 +52,7 @@ td:nth-child(9) {
     line-height: 1.2;
 }
 
-th:nth-child(9) {
+th:nth-child(6) {
     max-width: 200px;
     font-size: 12px;
 }
@@ -500,43 +500,43 @@ th:nth-child(9) {
         }
 
         /* Fixed width text columns */
-        td:nth-child(7), td:nth-child(8) {
+        td:nth-child(4), td:nth-child(5) {
             width: 25%;
             min-width: 200px;
             vertical-align: top;
         }
 
-        th:nth-child(7), th:nth-child(8) {
+        th:nth-child(4), th:nth-child(5) {
             width: 25%;
             min-width: 200px;
         }
 
 /* Make table responsive - aktualisierte Spalten-Nummern */
 @media (max-width: 1200px) {
-    td:nth-child(7), td:nth-child(8) {
+    td:nth-child(4), td:nth-child(5) {
         width: 25%;
         min-width: 180px;
     }
-    th:nth-child(7), th:nth-child(8) {
+    th:nth-child(4), th:nth-child(5) {
         width: 25%;
         min-width: 180px;
     }
     /* Debug-Spalte bei kleinen Bildschirmen ausblenden */
-    td:nth-child(9), th:nth-child(9) {
+    td:nth-child(6), th:nth-child(6) {
         display: none;
     }
 }
 
 @media (max-width: 900px) {
-    td:nth-child(7), td:nth-child(8) {
+    td:nth-child(4), td:nth-child(5) {
         width: 30%;
         min-width: 160px;
     }
-    th:nth-child(7), th:nth-child(8) {
+    th:nth-child(4), th:nth-child(5) {
         width: 30%;
         min-width: 160px;
     }
-    td:nth-child(9), th:nth-child(9) {
+    td:nth-child(6), th:nth-child(6) {
         display: none;
     }
 }
@@ -593,6 +593,22 @@ th:nth-child(9) {
 
         .upload-btn:hover {
             background: #1976d2;
+            color: white;
+        }
+
+        .history-btn {
+            background: #444;
+            border: none;
+            color: #e0e0e0;
+            padding: 6px 12px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: all 0.2s;
+            font-size: 16px;
+        }
+
+        .history-btn:hover {
+            background: #5e92f3;
             color: white;
         }
 
