--- a/web/src/style.css
+++ b/web/src/style.css
@@ -2250,6 +2250,13 @@ th:nth-child(6) {
     display: inline-block;
 }
 
+.auto-trans {
+    font-size: 11px;
+    color: #999;
+    margin-top: 2px;
+    white-space: pre-wrap;
+}
+
 @keyframes spin {
     from { transform: rotate(0deg); }
     to { transform: rotate(360deg); }
