style: vereinfachtes video-dialog styling

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -2418,6 +2418,12 @@ th:nth-child(6) {
 .video-dialog {
     /* Ohne open-Attribut verstecken */
     display: none;
+}
+
+/* Dialog erst anzeigen, wenn geöffnet */
+.video-dialog[open] {
+    /* Wird erst sichtbar, wenn das open-Attribut gesetzt ist */
+    display: block;
     width: clamp(700px, 80vw, 1200px);
     height: clamp(500px, 80vh, 800px);
     background: #1a1a1a;
@@ -2430,12 +2436,7 @@ th:nth-child(6) {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-}
-
-/* Dialog erst anzeigen, wenn geöffnet */
-.video-dialog[open] {
-    /* Wird erst sichtbar, wenn das open-Attribut gesetzt ist */
-    display: block;
+    transition: none;        /* keine Animation beim Öffnen */
 }
 
 /* Abdunklung hinter dem Dialog */
